--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <script src="https://cdn.jsdelivr.net/gh/ActiveTK/endpoint.js@main/src/client/endpoint.min.js"></script>
   </head>
   <body id="body">
-    <div class="time">
-      <spen class="title" id="time"></spen><span class="subtitle" id="timesec"></span>
+    <div class="main">
+      <div class="time">
+        <spen class="title" id="time"></spen><span class="subtitle" id="timesec"></span>
+      </div>
     </div>
   </body>
 </html>
